# social-media-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypi.ini  pyproject.toml
assets/: preprompt
src/: main.py  run.py
src/api/v1/: api_router.py
src/api/v1/routers/: input.py  scrape.py
src/core/: config.py  exceptions.py
src/exceptions/: http.py  validation.py
src/models/: input.py  scrape.py
src/services/: facebook_scraper.py  instagram_request_scraper.py  instagram_scraper.py  rate_social_media.py  result_feedback.py  sample.py  social_dorker.py  tiktok_scraper.py  x_request_scraper.py  x_scraper.py
src/utils/: convert_number_with_suffix.py  logging.py  time_to_epoch.py
tests/integration/v1/: test_input.py
tests/unit/: test_sample_service.py
