[tool.poetry]
name = "src"
version = "1.0.0"
description = "A social media scraper built in FastAPI with Playwright"
authors = ["Lester Vitor <lesterv@n-compass.biz>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
mypy = {extras = ["pydantic"], version = "^1.15.0"}
colorlog = "^6.9.0"
uvicorn = "^0.34.2"
bs4 = "^0.0.2"
requests = "^2.32.4"
playwright = "^1.53.0"
lxml = "^6.0.0"
aiohttp = "^3.12.13"
nest-asyncio = "^1.6.0"
httpx = "^0.28.1"
apify-client = "^1.12.0"
lxml-stubs = "^0.5.1"
types-requests = "^2.32.4.20250611"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest-mock = "^3.14.0"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.run:start"
test = "pytest:main"